--- a/packages/react-app/public/index.html
+++ b/packages/react-app/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Moonshot Bots</title>
+  <title>Anon Vs Moloch</title>
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -23,10 +23,8 @@
 
 
 
-    <style type="text/css">
-      body{
-        color:  #c9b8ff;
-        background: url('background_3.png') repeat;
+<style type="text/css">
+      /* body{
         text-align: center;
         font-family: "Space Mono",monospace;
         font-style: normal;
@@ -223,7 +221,7 @@
         width: 60px;
         height: 60px;
         margin: 5px;
-      }
+      } */
 
 
 h1 {
@@ -275,7 +273,7 @@ h1:before {
         margin-top: 100px;
         font-size: 24px;
       }
-    </style>
+</style>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
