fixes twitter card

--- a/packages/react-app/public/index.html
+++ b/packages/react-app/public/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Anon Vs Moloch</title>
+    <title>The Greatest LARP: Anon Vs Moloch</title>
     <link rel="manifest" href="site.webmanifest" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:site" content="@moonshotcollect"/>
+    <meta name="twitter:title" content="The Greatest LARP"/>
+    <meta name="twitter:description" content="The Greatest LARP is here.  Join Anon, your friendly ETH community member on their fight against Moloch - the god of Coordination Failure."/>
+    <meta name="twitter:image" content="https://p200.p0.n0.cdn.getcloudapp.com/items/eDuRq0Oy/d72225c8-e680-4217-8e51-b081fcc4bc22.png"/>
   </head>
 
   <body>
